<resources>
    <string name="app_name">Funny Physics App</string>
    <string name="more">More</string>
    <string name="nucleus">The atomic nucleus is the small, dense region consisting of protons and neutrons at the center of an atom, discovered in 1911 by Ernest Rutherford based on the 1909 Geiger–Marsden gold foil experiment. After the discovery of the neutron in 1932, models for a nucleus composed of protons and neutrons were quickly developed by Dmitri Ivanenko[1] and Werner Heisenberg.[2][3][4][5][6] An atom is composed of a positively charged nucleus, with a cloud of negatively charged electrons surrounding it, bound together by electrostatic force. Almost all of the mass of an atom is located in the nucleus, with a very small contribution from the electron cloud. Protons and neutrons are bound together to form a nucleus by the nuclear force.</string>
    <string name="core_text">The nucleus of an atom contains the subatomic parts known as protons and neutrons. The electron can be found in orbitals</string>
    <string name="scientist_text">A physicist is a scientist who specify in the field of physics, which surrounds the interactions of matter and energy.</string>
    <string name="formulas_text">A formula performs sums or other actions on the data in your worksheet. A formula always starts with an equal sign.</string>
    <string name="planets_text">The planets can be describe by their force fields: gravity and their magnetic fields, which are studied through geophysics.</string>
</resources>