<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/electron"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:textColor="#F1F0F0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="20dp"
        android:textSize="50sp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_marginTop="0dp"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="7dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#EDE9E9"
                android:id="@+id/cardView"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">


                <ImageView
                    android:id="@+id/planets"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/planets"
                    android:scaleType="centerCrop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Planets"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:layout_marginTop="103dp"
                    android:layout_marginStart="3dp"
                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/planets_text"
                    android:layout_marginTop="128dp"
                    android:textSize="16sp"
                    android:layout_marginStart="3dp"/>


<!--                <Button-->
<!--                    android:id="@+id/planets_btn"-->
<!--                    android:layout_width="60dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/more"-->
<!--                    android:backgroundTint="#13265a"-->
<!--                    android:layout_below="@id/planets"-->
<!--                    android:layout_marginTop="210dp"-->
<!--                    android:padding="0dp"-->
<!--                    android:layout_marginStart="3dp"-->
<!--                    android:textSize="16sp" />-->

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView1"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:backgroundTint="#EDE9E9"
                android:clickable="true"
                android:focusable="true"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">


                <ImageView
                    android:id="@+id/planets1"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/formulas" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Formulas"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:layout_marginTop="103dp"
                    android:layout_marginStart="3dp"
                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="127dp"
                    android:text="@string/formulas_text"
                    android:textSize="16sp" />


<!--                <Button-->
<!--                    android:id="@+id/formulas_btn"-->
<!--                    android:layout_width="60dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/more"-->
<!--                    android:backgroundTint="#13265a"-->
<!--                    android:layout_below="@id/planets"-->
<!--                    android:layout_marginTop="210dp"-->
<!--                    android:padding="0dp"-->
<!--                    android:layout_marginStart="3dp"-->
<!--                    android:textSize="16sp" />-->

            </androidx.cardview.widget.CardView>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginHorizontal="7dp"
            android:layout_marginVertical="40dp"
            android:layout_gravity=""
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#EDE9E9"
                android:id="@+id/cardView3"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">


                <ImageView
                    android:id="@+id/scientist"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/scientist"
                    android:scaleType="centerCrop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Physicists"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:layout_marginTop="103dp"
                    android:layout_marginStart="3dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scientist_text"
                    android:layout_marginTop="128dp"
                    android:textSize="16sp"
                    android:layout_marginStart="3dp"/>


<!--                <Button-->
<!--                    android:id="@+id/scientist_more"-->
<!--                    android:layout_width="60dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/more"-->
<!--                    android:backgroundTint="#13265a"-->
<!--                    android:layout_below="@id/planets"-->
<!--                    android:layout_marginTop="210dp"-->
<!--                    android:padding="0dp"-->
<!--                    android:layout_marginStart="3dp"-->
<!--                    android:textSize="16sp" />-->

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:backgroundTint="#EDE9E9"
                android:clickable="true"
                android:focusable="true"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">


                <ImageView
                    android:id="@+id/core"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/core" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Atomic nucleus"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:layout_marginTop="103dp"
                    android:layout_marginStart="3dp"
                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="128dp"
                    android:text="@string/core_text"
                    android:textSize="16sp" />


<!--                <Button-->
<!--                    android:id="@+id/core_btn"-->
<!--                    android:layout_width="60dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/more"-->
<!--                    android:backgroundTint="#13265a"-->
<!--                    android:layout_below="@id/planets"-->
<!--                    android:layout_marginTop="210dp"-->
<!--                    android:padding="0dp"-->
<!--                    android:layout_marginStart="3dp"-->
<!--                    android:textSize="16sp" />-->

            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>